fix: update api getallcategory
